# Elliot-AI

./: .gitignore  CONTRIBUTING.md  ELLIOT_CLI_COMPLETE.md  NPM_PUBLISH_GUIDE.md  README.md  RELEASE_ELLIOT_CLI.md  package-lock.json  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: __init__.py  dependencies.py  email.py  jwt.py  magic_link.py  oauth_state.py  router.py  schemas.py  sso_entra.py  sso_google.py
backend/app/connectors/: __init__.py
backend/app/db/: __init__.py  session.py
backend/app/llm/: __init__.py  base.py  claude.py  gemini.py  groq.py  openai.py  provider_manager.py
backend/app/models/: __init__.py  chunk.py  connector.py  knowledge_chunk.py  organisation.py  sdlc.py  team.py  tenant.py  token_usage.py  user.py
backend/app/orchestration/: __init__.py  prompt_builder.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: __init__.py  generate_fernet_key.py
backend/tests/: test_auth0_callback.py  test_auth0_service.py  test_auth_entra_oidc.py  test_auth_google_oidc.py  test_auth_magic_link.py  test_chunk_repository.py  test_chunk_schema.py  test_clickup_connector.py  test_confluence_connector.py  test_database_connector.py  test_doc_chunker.py  test_e2e_smoke.py  test_gdrive_connector.py  test_github_connector.py  test_gitlab_connector.py  test_jira_connector.py  test_launch.py  test_linear_connector.py  test_notion_connector.py  test_prompt_builder.py  test_response_handler.py  test_sdlc.py  test_sharepoint_connector.py  test_tenant_isolation.py  test_workspace.py
(+260 files in other folders)
